# rest/engine/error_handler.go
@@ -37,7 +37,7 @@ func handleErrorIfNeeded(c *gin.Context) {
 
 	// Compruebo tipos de errores conocidos
 	switch value := err.Err.(type) {
-	case apperr.Custom:
+	case apperr.RestError:
 		// Son validaciones hechas con NewCustom
 		setError(c, value)
 	case apperr.Validation:
@@ -55,7 +55,7 @@ func handleErrorIfNeeded(c *gin.Context) {
 		}
 	case error:
 		// Otros errores
-		c.JSON(500, apperr.OtherErrors{
+		c.JSON(500, ErrorData{
 			Error: value.Error(),
 		})
 	default:
@@ -74,6 +74,10 @@ func handleValidationError(c *gin.Context, validationErrors validator.Validation
 	c.JSON(400, err)
 }
 
-func setError(c *gin.Context, err apperr.Custom) {
+func setError(c *gin.Context, err apperr.RestError) {
 	c.JSON(err.Status(), err)
+}
+
+type ErrorData struct {
+	Error string `json:"error"`
 }
